feat: Socket Timeout & 재연결 로직 추가